--- a/autoware_tensorrt_vad/package.xml
+++ b/autoware_tensorrt_vad/package.xml
@@ -23,17 +23,10 @@
   <depend>tf2_eigen</depend>
   <depend>tf2_ros</depend>
 
-  <!-- System dependencies -->
-  <build_depend>libcuda-dev</build_depend>
-  <build_depend>libnvinfer-dev</build_depend>
-  <build_depend>libstb-dev</build_depend>
-  <build_depend>nlohmann-json-dev</build_depend>
-
-  <exec_depend>libcuda1</exec_depend>
-  <exec_depend>libnvinfer8</exec_depend>
-
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_cmake_gmock</test_depend>
+  <test_depend>ament_cmake_gtest</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
